--- a/index.html
+++ b/index.html
@@ -4,9 +4,11 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Web Sitem</title>
+    <title>Muharrem Yılmaz</title>
     <link rel="stylesheet" href="style.css" />
     <link rel="stylesheet" href="mediaqueries.css" />
+    <link rel="shortcut icon" type="image/png" href="./assets/web-design.png"/>
+
   </head>
   <body>
     <nav id="desktop-nav">
