--- a/index.html
+++ b/index.html
@@ -189,7 +189,7 @@
                   class="icon"
                 />
                 <div>
-                  <h3>React</h3>
+                  <h3>Angular</h3>
                   <p>Intermediate</p>
                 </div>
               </article>
