--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
           </div>
           <div class="text-container">
             <p>
-              Merhaba! Ben Muharrem, Fırat Üniversitesi Yazılım Mühendisliği 4. sınıf öğrencisiyim. Şimdiye kadar, başarılı projelere imza atan şirketlerde, özellikle Başarsoft, YapıKredi ve ID3 şirketlerinde, yaklaşık 1 seneye yakın süreyle görev aldım. Bu süre zarfında .NET ve React teknolojilerindeki yeteneklerimi geliştirdim.
+              Merhaba! Ben Muharrem, Fırat Üniversitesi Yazılım Mühendisliği 4. sınıf öğrencisiyim. Şimdiye kadar, başarılı projelere imza atan şirketlerde, özellikle Başarsoft, YapıKredi ve ID3 şirketlerinde, yaklaşık 1 seneye yakın süreyle görev aldım. Bu süre zarfında .NET ve Angular teknolojilerindeki yeteneklerimi geliştirdim.
             </p>
           </div>
         </div>
