--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
     </nav>
     <section id="profile">
       <div class="section__pic-container">
-        <img src="./assets/img1.jpg" alt="John Doe profile picture" />
+        <img src="./assets/img1.png" alt="John Doe profile picture" />
       </div>
       <div class="section__text">
         <p class="section__text__p1">Selam, Ben</p>
