--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
       <div class="section__text">
         <p class="section__text__p1">Selam, Ben</p>
         <h1 class="title">Muharrem Yılmaz</h1>
-        <p class="section__text__p2">Full Stack Developer</p>
+        <p class="section__text__p2">Backend Developer Intern At Kariyer.Net</p>
         <div class="btn-container">
           <button
             class="btn btn-color-2"
