--- a/index.html
+++ b/index.html
@@ -402,6 +402,7 @@
         </div>
       </nav>
       <p>Copyright &#169; 2023 Muharrem Yılmaz    Tüm hakları saklıdır.</p>
+      <p><a href="/robots.txt"></a></p> <!-- robots.txt bağlantısı -->
     </footer>
     <script src="script.js"></script>
   </body>
